[package]
name = "rust-canvas-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
once_cell = "1.18"
thiserror = "1.0"
anyhow = "1.0"
  
[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'Window',
  'MouseEvent',
  'console',
  'KeyboardEvent',
  'HtmlInputElement'
]

[dev-dependencies]
wasm-bindgen-test = "0.3"