[package]
name = "rust-canvas-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'Window',
  'MouseEvent',
  'console',
  'KeyboardEvent',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
